namespace Application.UserFeedback.Models;

public class NameIdPair
{
    public int Id { get; set; }
    public string Name { get; set; } = default!;
}
